istio-1.0.0/samples/test-service/destination-rules-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test-service
spec:
  host: test-service
  trafficPolicy:
    outlierDetection:
      baseEjectionTime: 60s
      consecutiveErrors: 2
      interval: 1s
      maxEjectionPercent: 100
  subsets:
  - name: 'all'
    labels:
      appn: 'test-service'
