istio-1.0.0/samples/test-service/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test-service
spec:
  host: test-service
  trafficPolicy:
    outlierDetection:
      baseEjectionTime: 60s
      consecutiveErrors: 2
      interval: 1s
      maxEjectionPercent: 100
  subsets:
  - name: '200'
    labels:
      version: '200'
  - name: '503'
    labels:
      version: '503'
