istio-1.0.0/samples/test-service/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-service
spec:
  hosts:
  - test-service
  http:
  - route:
    - destination:
        host: test-service
        subset: '200'
      weight: 75
    - destination:
        host: test-service
        subset: '503'
      weight: 25
